<resources>
    <string name="app_name">Group2_COMP304Lab4</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="centennial_hospital">Centennial hospital</string>
    <string name="company_logo">Company Logo</string>
    <string name="username">Username</string>
    <string name="enter_hr_30_200">Enter HR (30-200)</string>
    <string name="temperature">Temperature</string>
    <string name="enter_temperature_34_45">Enter Temperature (34-45)</string>
    <string name="save">Save</string>
    <string name="heart_rate_hr">Heart Rate (HR)</string>
    <string name="enter_bpn_50_200">Enter BPN (50-200)</string>
    <string name="blood_pressure_normal_bpn">Blood Pressure Normal (BPN)</string>
    <string name="enter_bph_50_200">Enter BPH (50-200)</string>
    <string name="blood_pressure_high_bph">Blood Pressure High (BPH)</string>
    <string name="enter_bpl_50_200">Enter BPL (50-200)</string>
    <string name="blood_pressure_low_bpl">Blood Pressure Low (BPL)</string>
    <string name="nurse_id">Nurse ID</string>
    <string name="test_detail">Test Detail</string>
    <string name="patient_information">Patient Information</string>
    <string name="firstname">Firstname</string>
    <string name="enter_firstname">Enter Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="enter_lastname">Enter Lastname</string>
    <string name="department">Department</string>
    <string name="room_id">Room ID</string>
    <string name="add">Add</string>
    <string name="tests">Tests</string>
    <string name="patients">Patients</string>

    <string-array name="rooms_array">
        <item>101</item>
        <item>102</item>
        <item>103</item>
        <item>104</item>
        <item>105</item>
        <item>106</item>
    </string-array>


    <string-array name="departments_array">
        <item>Psychiatry</item>
        <item>Oncology</item>
        <item>Emergency</item>
        <item>Pharmacy</item>
        <item>Surgery</item>
        <item>Radiology</item>
    </string-array>
</resources>