<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.test_update.ViewTestInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/gray_400"
            android:gravity="center"
            android:text="@string/test_detail"
            android:textColor="@color/Charcoal"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/nurse_id"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etNurseId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:hint="@string/nurse_id"
            android:autofillHints="@string/nurse_id"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/blood_pressure_low_bpl"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etBPL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_bpl_50_200"
            android:autofillHints="@string/enter_bpl_50_200"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/blood_pressure_high_bph"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etBPH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_bph_50_200"
            android:autofillHints="@string/enter_bph_50_200"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/blood_pressure_normal_bpn"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etBPN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_bpn_50_200"
            android:autofillHints="@string/enter_bpn_50_200"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/heart_rate_hr"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etHR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_hr_30_200"
            android:autofillHints="@string/enter_hr_30_200"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/temperature"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_temperature_34_45"
            android:autofillHints="@string/enter_temperature_34_45"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>