<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.patient_update.UpdateInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/gray_400"
            android:gravity="center"
            android:text="@string/patient_information"
            android:textColor="@color/Charcoal"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/firstname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/enter_firstname"
            android:inputType="textPersonName"
            android:autofillHints="@string/enter_firstname"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/lastname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/enter_lastname"
            android:inputType="textPersonName"
            android:autofillHints="@string/enter_lastname"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/nurse_id"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etNurseId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:fontFamily="sans-serif-light"
            android:inputType="textPersonName"
            android:autofillHints="@string/nurse_id"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/department"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="Pick Room ID"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/room_id"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="Pick Room ID"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>