<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/ivNurse"
        android:layout_width="260dp"
        android:layout_height="360dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ig_nurse"
        android:contentDescription="@string/company_logo" />
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivNurse"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/BurntSienna"
        android:text="@string/login"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLogin"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:autofillHints="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:text="@string/login" />



</RelativeLayout>